<?xml version="1.0"?>
<package>
  <name>mc_rtc_ros_control</name>
  <version>0.1.0</version>
  <description>mc_rtc integration with ros_control</description>

  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

